@@ -7,8 +7,8 @@
 #c3p0.testConnectionOnCheckout=true
 c3p0.testConnectionOnCheckin=true
 #c3p0.dataSourceName=poop
-#c3p0.minPoolSize=1
-c3p0.maxPoolSize=40
+#c3p0.minPoolSize=10
+#c3p0.maxPoolSize=40
 #c3p0.checkoutTimeout=2000
 #c3p0.idleConnectionTestPeriod=30
 #c3p0.idleConnectionTestPeriod=1
@@ -19,14 +19,14 @@ c3p0.maxPoolSize=40
 #c3p0.numHelperThreads=10
 #c3p0.unreturnedConnectionTimeout=15
 #c3p0.debugUnreturnedConnectionStackTraces=true
-#c3p0.maxStatements=20
+c3p0.maxStatements=20
 #c3p0.maxStatementsPerConnection=5
 #c3p0.maxAdministrativeTaskTime=3
 c3p0.preferredTestQuery=SELECT 1
 #c3p0.preferredTestQuery=SXLECT 1
 #c3p0.preferredTestQuery=SELECT a FROM emptyyukyuk WHERE a = 5
 #c3p0.preferredTestQuery=SELECT a FROM testpbds WHERE a = 5
-#c3p0.statementCacheNumDeferredCloseThreads=1
+c3p0.statementCacheNumDeferredCloseThreads=1
 #c3p0.usesTraditionalReflectiveProxies=true
 #c3p0.automaticTestTable=PoopyTestTable
 #c3p0.acquireIncrement=3
